# neural-sparse-linear-solvers-master

./: nsls_environment.yml
configs/: nsls_stand_small_32.yaml
neural-sparse-linear-solvers-master/: .gitignore
neural-sparse-linear-solvers-master/configs/: nsls_stand_small_128.yaml
neural-sparse-linear-solvers-master/nsls/: __main__.py  augmentations.py  config_trainer.py  gnn.py  graph_system_dataset.py
neural-sparse-linear-solvers-master/solvers/: CMakeLists.txt
neural-sparse-linear-solvers-master/solvers/include/solvers/: NeuralSolver.hpp  SparseSystem.hpp  TorchSolver.hpp  ViennaCLSolver.hpp
neural-sparse-linear-solvers-master/solvers/src/solvers/: SparseSystem.cpp  TorchSolver.cpp  ViennaCLSolver.cu
nsls/: config.py  config_trainer.py  losses.py  metrics.py  neural_solver.py  preprocessors.py  single_inference.py
predictions/test/: batch_0.npz  batch_1.npz  batch_10.npz  batch_11.npz  batch_12.npz  batch_13.npz  batch_14.npz  batch_15.npz  batch_16.npz  batch_17.npz  batch_18.npz  batch_19.npz  batch_2.npz  batch_3.npz  batch_4.npz  batch_5.npz  batch_6.npz  batch_7.npz  batch_8.npz  batch_9.npz
scripts/: explore_files.py  move_files.py  scipy_solver.py
solvers/benchmark/: CMakeLists.txt  main.cpp
solvers/include/solvers/: CuSparseSolver.hpp  Solver.hpp
solvers/src/: CMakeLists.txt
solvers/src/solvers/: CuSparseSolver.cpp  NeuralSolver.cpp
